# dirty-product-linker

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml  render.yaml
docs/: ai-challenge-set.md  benchmark-review.md  catalog-building.md  data-contract.md  development-set.md  embedding-baseline.md  feature-reranker.md  hybrid-linker.md  lexical-baseline.md  multi-product-evaluation.md  multi-product-review-checklist.md  semantic-retrieval.md  source-data.md  synthetic-challenge-set.md
scripts/: build_catalog.py  create_ai_challenge_set.py  create_synthetic_challenge_set.py  evaluate_embedding_development.py  evaluate_hybrid_development.py  evaluate_lexical_baseline.py  evaluate_lexical_development.py  evaluate_multi_product_candidates.py  evaluate_semantic_reranker.py  freeze_benchmark.py  import_esci_queries.py  import_shopify_catalog.py  promote_multi_product_holdout.py  promote_reviewed_benchmark.py
tests/: test_ai_challenge_data.py  test_api.py  test_baseline_evaluation.py  test_benchmark_freeze.py  test_benchmark_review.py  test_catalog_build.py  test_catalog_release.py  test_catalog_v0_2.py  test_cli.py  test_data_files.py  test_development_data.py  test_development_report.py  test_embedding_linker.py  test_embedding_report.py  test_end_to_end_linker.py  test_esci_importer.py  test_esci_pipeline.py  test_evaluation_report.py  test_feature_reranker.py  test_hybrid_linker.py  test_hybrid_report.py  test_import_checkpoint.py  test_lexical_linker.py  test_mention_evaluation.py  test_mentions.py  test_multi_product_data.py  test_schemas.py  (+13 more)
(+86 files in other folders)
