[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirty-product-linker"
version = "0.1.0"
description = "Product extraction and entity linking for noisy multilingual text"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "ofeliacode" }]
dependencies = [
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
]

[project.scripts]
product-linker = "dirty_product_linker.cli:main"

[project.optional-dependencies]
data = [
  "datasets>=4.8,<5",
]
embeddings = [
  "sentence-transformers>=5.2,<6",
]
api = [
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
  "types-pyyaml>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dirty_product_linker"]

[tool.hatch.build.targets.wheel.force-include]
"data/catalog/demo_catalog_v0_2.jsonl" = "dirty_product_linker/data/demo_catalog_v0_2.jsonl"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["dirty_product_linker"]
mypy_path = "src"
